--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -43,7 +43,7 @@
     <div class="top-paragraph">
       <div>
       <h1>Features</h1>
-        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        <p>Aliquam elementum magna erros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
       </div>
       <div>
       <h1>About</h1>
