--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -96,7 +96,7 @@
       <div>
         <h1>Some Facts About Our Services</h1>
 
-        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus ruttrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
         eleifend. Mauris euismod facilisis iaculis.</p>
         
         <ul class="bullets">
