--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -16,12 +16,12 @@
 
   <body>
     <nav>
-      <a>Services</a>
-      <a>Product</a>
-      <a>Vision</a>
-      <a>Features</a>
-      <a>About</a>
-      <a>Contact</a>
+      <a href="http://127.0.0.1:5500/great-idea/services.html#">Services</a>
+      <a href="#">Product</a>
+      <a href="#">Vision</a>
+      <a href="#">Features</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
 
       <img class="logo" src="img/logo.png" 
       alt="Great Idea! Company logo.">
