--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -16,12 +16,12 @@
 
   <body>
     <nav>
-      <a>Services</a>
-      <a>Product</a>
-      <a>Vision</a>
-      <a>Features</a>
-      <a>About</a>
-      <a>Contact</a>
+      <a href="#">Services</a>
+      <a href="#">Product</a>
+      <a href="#">Vision</a>
+      <a href="#">Features</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
     
       <img class="logo" src="img/logo.png" 
       alt="Great Idea! Company logo.">
